clusters/production/apps/postgres-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-production
  labels:
    app.kubernetes.io/part-of: postgres-production
