clusters/production/apps/postgres-production/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: postgres-production
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
