clusters/production/apps/postgres-production/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: postgres-production
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Data
    gethomepage.dev/name: Adminer (Postgres production)
    gethomepage.dev/siteMonitor: https://adminer-pg-prod.mgmt.wsh.no
    gethomepage.dev/icon: mdi-database-outline
    gethomepage.dev/description: Adminer for CNPG postgres-production (OIDC via oauth2-proxy + Authelia); default postgres-prod-rw
    gethomepage.dev/weight: "11"
spec:
  rules:
  - host: adminer-pg-prod.mgmt.wsh.no
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-adminer
            port:
              number: 4180
