clusters/production/apps/postgres-production/cilium-networkpolicy-cnpg-apiserver.yaml
# Same rationale as postgres-test cnpg-to-kubernetes-apiserver (Cilium host/remote-node path to apiserver).
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-to-kubernetes-apiserver
  namespace: postgres-production
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres-prod
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
      - port: "443"
        protocol: TCP
