clusters/production/apps/postgres-production/networkpolicy-adminer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adminer
  namespace: postgres-production
spec:
  podSelector:
    matchLabels:
      app: adminer
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik
    ports:
    - port: 8080
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres-production
    ports:
    - port: 5432
      protocol: TCP
