clusters/production/apps/postgres-production/networkpolicy-cnpg-clutterstockdb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-clutterstockdb
  namespace: postgres-production
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: clutterstockdb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: clutterstock-production
    ports:
    - port: 5432
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres-production
      podSelector:
        matchLabels:
          app: adminer
    ports:
    - port: 5432
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
    ports:
    - port: 5432
      protocol: TCP
    - port: 8000
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres-production
    ports:
    - port: 5432
      protocol: TCP
    - port: 8000
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 169.254.169.254/32
    ports:
    - port: 443
      protocol: TCP
